@@ -30,7 +30,7 @@ import org.apache.kafka.common.metrics.Sensor;
 import org.apache.kafka.common.security.auth.SecurityProtocol;
 import org.apache.kafka.common.utils.Utils;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -283,8 +283,8 @@ public class AdminClientConfig extends AbstractConfig {
                                         Importance.LOW,
                                         METADATA_RECOVERY_REBOOTSTRAP_TRIGGER_MS_DOC)
                                 .define(CONFIG_PROVIDERS_CONFIG, 
-                                        ConfigDef.Type.LIST, 
-                                        Collections.emptyList(), 
+                                        ConfigDef.Type.LIST,
+                                        List.of(), 
                                         ConfigDef.Importance.LOW, 
                                         CONFIG_PROVIDERS_DOC);
     }
