@@ -30,7 +30,6 @@ import org.apache.kafka.common.utils.Utils;
 import org.apache.kafka.connect.runtime.ConnectorConfig;
 
 import java.time.Duration;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -323,7 +322,7 @@ public abstract class MirrorConnectorConfig extends AbstractConfig {
                     CommonClientConfigs.SECURITY_PROTOCOL_DOC)
             .define(CONFIG_PROVIDERS_CONFIG,
                     ConfigDef.Type.LIST,
-                    Collections.emptyList(),
+                    List.of(),
                     ConfigDef.Importance.LOW, 
                     CONFIG_PROVIDERS_DOC)
             .withClientSslSupport()
